--- a/src/styles/LeftNavbar.css
+++ b/src/styles/LeftNavbar.css
@@ -2,9 +2,15 @@
 
 .nav-link {
     font-family: 'Russo One', sans-serif;
-    background-color: rgba(240, 255, 255, 0.161);
+    color: #00FF89;
     padding: 5px;
+    margin-block: 4px;
 }
+
+.nav-link:focus {
+    color: #008044;
+}
+
 
 .MPLogo {
     animation: rotate 20s linear infinite;
@@ -37,6 +43,12 @@ button.greenLogoColor {
     color: #02894a;
 }
 
+@media (min-width: 1200px) {
+    .MPLogo {
+        max-height: 20vh;
+    }
+}
+
 @media (min-width: 576px) {
     .customHeigth {
         min-height: 100vh;
@@ -50,6 +62,6 @@ button.greenLogoColor {
     }
 
     .MPLogo {
-        max-width: 9vh;
+        max-height: 9vh;
     }
 }
